--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "vite-project",
+  "name": "product-search",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "typecheck": "tsc -b",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
